--- a/k8s/rest-api/templates/service.yaml
+++ b/k8s/rest-api/templates/service.yaml
@@ -7,8 +7,8 @@ metadata:
 spec:
   type: {{ .Values.service.type }}
   ports:
-    - port: {{ .Values.service.port }}
-      nodePort: 30124
+    - port: 9999
+      targetPort: 80
       protocol: TCP
       name: http
   selector:
