--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -12,7 +12,6 @@ git_override(
 )
 
 oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")
-
 oci.pull(
     name = "distroless_base",
     digest = "sha256:ccaef5ee2f1850270d453fdf700a5392534f8d1a8ca2acda391fbb6a06b81c86",
@@ -24,3 +23,11 @@ oci.pull(
 )
 
 use_repo(oci, "distroless_base")
+
+go_deps = use_extension("@bazel_gazelle//:extensions.bzl", "go_deps")
+go_deps.from_file(go_mod = "//:go.mod")
+
+use_repo(
+    go_deps,
+    "com_github_rabbitmq_amqp091_go",
+)
