--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -21,13 +21,12 @@ oci.pull(
         "linux/arm64",
     ],
 )
-
 use_repo(oci, "distroless_base")
 
 go_deps = use_extension("@bazel_gazelle//:extensions.bzl", "go_deps")
 go_deps.from_file(go_mod = "//:go.mod")
-
 use_repo(
     go_deps,
     "com_github_rabbitmq_amqp091_go",
+    "com_github_segmentio_kafka_go",
 )
