--- a/k8s/metallb.yml
+++ b/k8s/metallb.yml
@@ -6,3 +6,8 @@ metadata:
 spec:
   addresses:
   - 192.168.11.0/24
+apiVersion: metallb.io/v1beta1
+kind: L2Advertisement
+metadata:
+  name: simplel2
+  namespace: metallb-system
