--- a/k8s/helmsman.yml
+++ b/k8s/helmsman.yml
@@ -25,6 +25,9 @@ apps:
     set:
       controller.replicaCount: 1
       controller.livenessProbe.initialDelaySeconds: 120
+      extraConfig: |
+        offsets.topic.replication.factor=1
+        transaction.state.log.replication.factor=1
 
   payload-processor:
     namespace: default
