misc: set proper priorities in helmsman config

--- a/k8s/helmsman.yml
+++ b/k8s/helmsman.yml
@@ -15,6 +15,7 @@ apps:
     chart: metallb/metallb
     version: 0.14.5
     valuesFile: metallb.yml
+    priority: -4
 
   kafka:
     namespace: default
@@ -22,6 +23,7 @@ apps:
     wait: true
     chart: oci://registry-1.docker.io/bitnamicharts/kafka
     version: 28.1.1
+    priority: -3
     set:
       controller.replicaCount: 1
       controller.livenessProbe.initialDelaySeconds: 120
@@ -32,17 +34,17 @@ apps:
   payload-processor:
     namespace: default
     enabled: true
-    wait: true
     chart: payload-processor
     version: 0.1.0
+    priority: -2
     set:
       image.tag: "payload-processor-$COMMIT_SHA"
 
   rest-api:
     namespace: default
     enabled: true
-    wait: true
     chart: rest-api
     version: 0.1.0
+    priority: -1
     set:
       image.tag: "rest-api-$COMMIT_SHA"
