--- a/k8s/helmsman.yml
+++ b/k8s/helmsman.yml
@@ -30,6 +30,8 @@ apps:
       extraConfig: |
         offsets.topic.replication.factor=1
         transaction.state.log.replication.factor=1
+        log.retention.hours=24
+        log.retention.bytes=2147483648
 
   payload-processor:
     namespace: default
