--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -28,4 +28,5 @@ go_deps.from_file(go_mod = "//:go.mod")
 use_repo(
     go_deps,
     "com_github_segmentio_kafka_go",
+    "com_github_stretchr_testify",
 )
