--- a/k8s/helmsman.yml
+++ b/k8s/helmsman.yml
@@ -24,6 +24,7 @@ apps:
     set:
       controller.replicaCount: 1
       controller.livenessProbe.initialDelaySeconds: 120
+      provisioning.numPartitions: 2
       extraConfig: |
         offsets.topic.replication.factor=1
         transaction.state.log.replication.factor=1
