--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -2,6 +2,8 @@ bazel_dep(name = "rules_go", version = "0.47.0", repo_name = "io_bazel_rules_go"
 bazel_dep(name = "gazelle", version = "0.36.0", repo_name = "bazel_gazelle")
 bazel_dep(name = "rules_oci", version = "1.7.5")
 bazel_dep(name = "rules_pkg", version = "0.9.1")
+bazel_dep(name = "rules_helm", version = "0.4.0")
+bazel_dep(name = "aspect_bazel_lib", version = "2.7.3")
 
 # This is needed so that rules_oci supports arm64
 # See: https://github.com/bazel-contrib/rules_oci/issues/253
