--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -29,6 +29,7 @@ go_deps = use_extension("@bazel_gazelle//:extensions.bzl", "go_deps")
 go_deps.from_file(go_mod = "//:go.mod")
 use_repo(
     go_deps,
+    "com_github_google_uuid",
     "com_github_jmoiron_sqlx",
     "com_github_lib_pq",
     "com_github_segmentio_kafka_go",
